--- a/css/detail.css
+++ b/css/detail.css
@@ -1,3 +1,21 @@
-.detail-content{
-	min-height:600px;
+.detail-item{
+	border: none;
+	min-height: 500px;
+}
+.detail-item .panel-heading{
+	background: #fff;
+    border-radius: 0;
+    border-bottom: none;
+}
+.detail-item .panel-title{
+	font-size: 30px;
+}
+.sub-title{
+	margin-top: 10px;
+}
+.sub-title span{
+	margin-right: 10px;
+}
+.summary-text{
+	font-weight: bold;
 }
